Added ride receipt

--- a/v2/src/app/views/emails/ride_receipt.html
+++ b/v2/src/app/views/emails/ride_receipt.html
@@ -126,12 +126,12 @@
                     <tr style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
                         <td align="center" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
                             <p class="small-text" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;font-size:20px;color:#707070;margin:0px;letter-spacing:0.006em;font-weight:300">Estimated Distance</p>
-                            <p class="header2-text" style="font-size:43px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;color:#707070;font-weight:200;margin:0px;letter-spacing:0.005em">56KM</p>
+                            <p class="header2-text" style="font-size:43px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;color:#707070;font-weight:200;margin:0px;letter-spacing:0.005em">{{trip.distance}}</p>
                         </td>
                         <td style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;"></td>
                         <td align="center" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
                             <p class="small-text" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;font-size:20px;color:#707070;margin:0px;letter-spacing:0.006em;font-weight:300">Estimated Time</p>
-                            <p class="header2-text" style="font-size:43px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;color:#707070;font-weight:200;margin:0px;letter-spacing:0.005em">7 Min</p>
+                            <p class="header2-text" style="font-size:43px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;color:#707070;font-weight:200;margin:0px;letter-spacing:0.005em">{{trip.time}}</p>
                         </td>
                     </tr>
                 </table>
@@ -210,12 +210,12 @@
                                 <tr style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
                                     <td align="center" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
                                         <p class="small-text" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;font-size:20px;color:#707070;margin:0px;letter-spacing:0.006em;font-weight:300">Estimated Distance</p>
-                                        <p class="header2-text" style="font-size:43px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;color:#707070;font-weight:200;margin:0px;letter-spacing:0.005em">56KM</p>
+                                        <p class="header2-text" style="font-size:43px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;color:#707070;font-weight:200;margin:0px;letter-spacing:0.005em">{{trip.distance}}</p>
                                     </td>
                                     <td style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;"></td>
                                     <td align="center" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
                                         <p class="small-text" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;font-size:20px;color:#707070;margin:0px;letter-spacing:0.006em;font-weight:300">Estimated Time</p>
-                                        <p class="header2-text" style="font-size:43px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;color:#707070;font-weight:200;margin:0px;letter-spacing:0.005em">7 Min</p>
+                                        <p class="header2-text" style="font-size:43px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;color:#707070;font-weight:200;margin:0px;letter-spacing:0.005em">{{trip.time}}</p>
                                     </td>
                                 </tr>
                             </table>
