--- a/v2/src/app/views/emails/user_reply_email.html
+++ b/v2/src/app/views/emails/user_reply_email.html
@@ -1,92 +1,81 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-<head>
-<meta name="viewport" content="width=device-width" />
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Actionable emails e.g. reset password</title>
+<html style="width:100%;height:auto;padding:0;margin:0;overflow-x:hidden;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
 
-
-<style type="text/css">
-img {
-max-width: 100%;
-}
-body {
--webkit-font-smoothing: antialiased; -webkit-text-size-adjust: none; width: 100% !important; height: 100%; line-height: 1.6em;
-}
-body {
-background-color: #f6f6f6;
-}
-@media only screen and (max-width: 640px) {
-  body {
-    padding: 0 !important;
-  }
-  h1 {
-    font-weight: 800 !important; margin: 20px 0 5px !important;
-  }
-  h2 {
-    font-weight: 800 !important; margin: 20px 0 5px !important;
-  }
-  h3 {
-    font-weight: 800 !important; margin: 20px 0 5px !important;
-  }
-  h4 {
-    font-weight: 800 !important; margin: 20px 0 5px !important;
-  }
-  h1 {
-    font-size: 22px !important;
-  }
-  h2 {
-    font-size: 18px !important;
-  }
-  h3 {
-    font-size: 16px !important;
-  }
-  .container {
-    padding: 0 !important; width: 100% !important;
-  }
-  .content {
-    padding: 0 !important;
-  }
-  .content-wrap {
-    padding: 10px !important;
-  }
-  .invoice {
-    width: 100% !important;
-  }
-}
-</style>
+<head><style>@media only screen and (min-width: 700px){.header-text{font-size:50px !important;font-weight:100 !important}.header2-text{font-size:20px !important;font-weight:200 !important}.small-text{font-size:15px !important;font-weight:300 !important}.hidden-desktop{display:none !important}.hidden-phone{display:block !important}}@media only screen and (max-width: 700px){.header-text{font-size:30px !important}.header2-text{font-size:20px !important}.hidden-phone{display:none !important}}</style>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html charset=UTF-8" />
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
 </head>
 
-<body itemscope itemtype="http://schema.org/EmailMessage" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; -webkit-font-smoothing: antialiased; -webkit-text-size-adjust: none; width: 100% !important; height: 100%; line-height: 1.6em; background-color: #f6f6f6; margin: 0;" bgcolor="#f6f6f6">
+<body style="width:100%;height:auto;padding:0;margin:0;overflow-x:hidden;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+    <div class="background" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;display:block;background-color:#f7a565;background-image:linear-gradient(#f7a565, #e92369);padding-top:2%;padding-bottom:2%">
+        <div class="card" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;display:block;width:95%;background-color:#FAFAFA;height:90%;margin-left:2.5%">
+            <table cellspacing="10" width="100%" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                <tr style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                    <td colspan="2" style="padding-left:20px;padding-top:20px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                        <img src="https://res.cloudinary.com/moov-api/image/upload/v1552984539/public/images/logo.jpg" class="logo" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;width:70px;margin-left:15px" />
+                    </td>
+                    <td align="right" style="padding-right:20px;margin-right:-30px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                        <div class="cloud-block" style="margin-right:50px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;display:none;width:100px;height:20px;background-color:#f7a565;border-radius:20px;margin-top:-5px"></div>
+                        <div class="cloud-block" style="width:150px;margin-right:25px;height:25px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;display:none;background-color:#f7a565;border-radius:20px;margin-top:-5px"></div>
+                        <div class="cloud-block" style="width:200px;height:35px;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;display:none;background-color:#f7a565;border-radius:20px;margin-top:-5px"></div>
+                    </td>
+                </tr>
+                <tr style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                    <td align="left" class="hidden-phone" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;display:none">
+                        <div class="cloud-block hidden-phone" style="width:70px;height:20px;margin-left:-45px;background-color:#F48766;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;display:none;border-radius:20px;margin-top:-5px"></div>
+                        <div class="cloud-block hidden-phone" style="width:100px;height:25px;margin-left:-60px;background-color:#F48766;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;display:none;border-radius:20px;margin-top:-5px"></div>
+                    </td>
+                    <td style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                        <h1 class="header-text" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;font-size:40px;font-weight:100;color:#707070;margin:0px">
+                            Hello {{recipient_name}}<br style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;" />
+                        </h1>
+                        <br style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;" />
+                        <br style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;" />
+                        <h3 class="small-text" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;font-size:15px;color:#707070;margin:0px;letter-spacing:0.006em;font-weight:300">{{message|nl2br}}</h3>
+                    </td>
+                    <td align="right" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                        <div class="cloud-block" style="width:70px;height:20px;margin-right:-45px;background-color:#F48766;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;display:none;border-radius:20px;margin-top:-5px"></div>
+                        <div class="cloud-block" style="width:100px;height:25px;margin-right:-60px;background-color:#F48766;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;display:none;border-radius:20px;margin-top:-5px"></div>
+                    </td>
+                </tr>
+            </table>
+            
+            <table cellspacing="20" cellpadding="20" width="100%" style="background-color:#FFFFFF;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;display:none" class="hidden-phone">
+                <td align="left" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                    <p class="footer-text" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;font-size:21px;font-weight:200;color:#707070">&#xA9; 2019 The Moov App</p>
+                </td>
+                <td style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;"></td>
+                <td align="right" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                    <p class="footer-text footer-link " style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;font-size:21px;font-weight:200;color:#E92369">
+                        <a href="#" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;text-decoration:none;color:#E92369">Contact us</a>
+                        | <a href="#" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;text-decoration:none;color:#E92369">Report</a>
+                        | <a href="#" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;text-decoration:none;color:#E92369">Trips</a>
+                    </p>
+                </td>
+            </table>
+            <table cellspacing="0" width="100%" style="background-color:#FFFFFF;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;" class="hidden-desktop">
+                <tr style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                    <td align="center" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                        <p class="footer-text footer-link" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;font-size:21px;font-weight:200;color:#E92369">
+                            <a href="#" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;text-decoration:none;color:#E92369">Contact us</a> |
+                            <a href="#" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;text-decoration:none;color:#E92369">Report</a> |
+                            <a href="#" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;text-decoration:none;color:#E92369">Trips</a>
+                        </p>
+                    </td>
+                </tr>
+                <tr style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                    <td align="center" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
+                        <p class="footer-text" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;font-size:21px;font-weight:200;color:#707070">&#xA9; 2019 The Moov App</p>
+                    </td>
+                </tr>
 
-<table class="body-wrap" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; width: 100%; background-color: #f6f6f6; margin: 0;" bgcolor="#f6f6f6"><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0;" valign="top"></td>
-		<td class="container" width="600" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; display: block !important; max-width: 600px !important; clear: both !important; margin: 0 auto;" valign="top">
-			<div class="content" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; max-width: 600px; display: block; margin: 0 auto; padding: 20px;">
-				<table class="main" width="100%" cellpadding="0" cellspacing="0" itemprop="action" itemscope itemtype="http://schema.org/ConfirmAction" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; border-radius: 3px; background-color: #fff; margin: 0; border: 1px solid #e9e9e9;" bgcolor="#fff"><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="content-wrap" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 20px;" valign="top">
-							<meta itemprop="name" content="Confirm Email" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;" /><table width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-                <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-                                        <td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;"
-                                            valign="top">
-                                            <h1 style="text-align: center;color: blue;">Moov Admin</h1>
-                                            <h3 style="text-align: center;color: red;">Support Email</h3>
-                                        </td>
-                                    </tr>
-                <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-                                        <td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;"
-                                            valign="top">
-                                            This message is intended for:  {{recipient_name}} 
-                                        </td>
-                                    </tr>
-                <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-										{{message|nl2br}}
-									</td>
-								</tr><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-										&mdash; MOOV APP
-									</td>
-								</tr></table></td>
-					</tr></table><div class="footer" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; width: 100%; clear: both; color: #999; margin: 0; padding: 20px;">
-				</div></div>
-		</td>
-		<td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0;" valign="top"></td>
-	</tr></table></body>
+            </table>
+        </div>
+    </div>
+</body>
+
 </html>
