Made the reply email textbigger

--- a/v2/src/app/views/emails/user_reply_email.html
+++ b/v2/src/app/views/emails/user_reply_email.html
@@ -35,7 +35,7 @@
                         </h1>
                         <br style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;" />
                         <br style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;" />
-                        <h3 class="small-text" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;font-size:15px;color:#707070;margin:0px;letter-spacing:0.006em;font-weight:300">{{message|nl2br}}</h3>
+                        <h3 class="header2-text" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;font-size:20px;color:#707070;font-weight:200;margin:0px;letter-spacing:0.005em">{{message|nl2br}}</h3>
                     </td>
                     <td align="right" style="font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;">
                         <div class="cloud-block" style="width:70px;height:20px;margin-right:-45px;background-color:#F48766;font-family:&quot;HelveticaNeue-UltraLight&quot;, &quot;Helvetica Neue&quot;;display:none;border-radius:20px;margin-top:-5px"></div>
